fix line gap issue

--- a/src/common/DateInfo/DateInfo.scss
+++ b/src/common/DateInfo/DateInfo.scss
@@ -29,7 +29,6 @@
   .info-list-item {
     position: relative;
     line-height: 21px;
-    padding: 2px $zero;
     text-align: justify;
     &:before {
       content: '*';
